# grpc-sdk

./: .gitmodules  CMakeLists.txt  README.md
include/hello/: hello.h
include/protocol/: istxrx.h
include/protocol/commands/: DefaultCommand.h  setStateDevice.h
include/serializer/: serializer.h
include/services/: device.h
proto/: CMakeLists.txt
proto/hello/: hello.proto
proto/protocol/: protocol_messages.proto
proto/services/: device.proto
proto/services/commands/: linkInputToOutput.proto  setStateOutput.proto
src/: main.cpp
src/hello/: hello.cpp
src/protocol/: istxrx.cpp
src/protocol/commands/: linkInputToOutput.cpp  setStateDevice.cpp
src/serializer/: serializer.cpp
src/services/: device.cpp
